fix: [PL-14296]: remove custom letter-spacing (#226)

--- a/src/styled-props/font/font.css
+++ b/src/styled-props/font/font.css
@@ -12,7 +12,6 @@
 
     white-space: normal;
     line-height: var(--line-height);
-    letter-spacing: 0.5px;
   }
 
   &.font-h1 {
